# Signal

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SignalConfig.cmake.in  vcpkg.json
.github/workflows/: CI.yml  ci.yml
Signal_Example/: CMakeLists.txt
Signal_Example/src/: main.cpp
Signal_Test/: CMakeLists.txt
Signal_Test/src/: main.cpp  scopedconnectiontests.cpp  signaltests.cpp  signattests.cpp
include/mw/: signal.h
src/: CMakeLists.txt
src/mw/: signal.h
src/mw/signals/: connection.h
srcTest/: main.cpp
